fix(css): attempt to force safari honor font-weight on ios

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -4,7 +4,7 @@
 
 .md-typeset {
     a {
-        font-weight:bold;
+        font-weight: bold !important;
     }
 }
 
